Endpoints de aeropuertos, ciudades y paises
